# practice_topic_2_parser

./: config.py  database.py  main.py  models.py  parser.py  pyproject.toml  requirements.txt  save_to_database.py
